fix Tips detail page Spacing between RV Storage title and RV Storage content is not as per mock.

--- a/css/gs-custom.css
+++ b/css/gs-custom.css
@@ -15191,6 +15191,7 @@ div.header-dekstop-tablet {
 
 .tips-detail-title{
     font-size: 20px !important;
+    margin: 30px 0 5px !important;
 }
 
 .tips-detail-text, .tips-detail-numbering {
